assets/css/style.css
/* ... */
#start-game-btn,
#go-home-btn {
    background-color: #FC7070;
    color: white;
    transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
}


#restart-game-btn {
    background-color: #d1d1d1;
    transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
}

#start-again-btn {
    background-color: #FCADAD;
    transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
}

#restart-button-div,
#start-again-button-div {
    margin-top: 60px;
}



/* Background */

#background-div {
    background: linear-gradient(180deg, #AAE2FF 0.01%, #FBFBFB 70%);
    max-width: 1300px;
    margin: 0 auto;
    position: absoloute;
}


/* Logo */


#logo-div img {
    width: 220px;
    margin-top: 50px;
}


/* Footer */

#cloud-div {
    height: 350px;
    background-image: url("../images/clouds_lrg.png");
    background-position: center bottom;
    background-repeat: no-repeat;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    position: relative;
    bottom: 0px;
    width: 100%;
    max-width: 1300px;
}

#footer-contents {
    position: absolute;
    bottom: 20px;
    width: 100%;
    align-items: baseline;
    column-gap: 20px;
}


#social-links {
    column-gap: 20px;
}

#social-links a {
    text-decoration: none;
    font-size: 32px;
    color: black;
    transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
}

#social-links a:hover {
    color: #FC7070;
}


/* Welcome Page */

#welcome-div {
    width: 70%;
    max-width: 600px;
    margin: 0 auto;
    margin-top: 60px;
}

#welcome-div h1 {
    margin-bottom: 30px;
}

#start-button-div {
    margin: 60px 0;
}

#name-input {
    display: block;
    margin: 0 auto;
    min-width: 150px;
    border-radius: 10px;
    padding: 10px;
    margin-bottom: 20px;
}



/* Game */

#progress-div {
    margin: 0 auto;
    margin-top: 50px;
    width: 400px;
    position: relative;
    padding-bottom: 50px;
}

#progress-text {
    margin-bottom: 15px;
    text-align: left;
}

.progressbar {
    height: 15px;
    border-radius: 20px;
    position: absolute;
}

#progressbar-bg {
    width: 100%;
    background-color: #F7F0F0;
}

#progressbar-fg {
    background-color: #FCADAD;
    z-index: 2;
    width: 10%;
}

#question-text {
    font-size: 26px;
    margin-bottom: 40px;
    padding: 0 25px;
}

#answer-div,
#answer-tie-div {
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    row-gap: 20px;
}

#answer-div {
    width: 70%;
    max-width: 960px;
}

#answer-div {
    justify-content: space-between;
}

.btn-choice {
    background-color: #4D93BB;
    color: white;
    width: 48%;
    height: 90px;
    padding: 18px 20px;
    border: none;
    box-shadow: 2px -2px 4px 2px rgba(0, 0, 0, 0.15);
    border-radius: 15px;
    transition: background-color 0.25s ease-in-out;
    -moz-transition: background-color 0.25s ease-in-out;
    -webkit-transition: background-color 0.25s ease-in-out;
    -o-transition: background-color 0.25s ease-in-out;
}



/* Game Tie Breaker styling */

#answer-tie-div {
    column-gap: 20px;
}

#answer-tie-div-hide {
    width: 85%;
    margin: 0 auto;
}

#tie-break-title {
    font-size: 26px;
    margin-top: 30px;
    margin-bottom: 10px;
    padding: 0 25px;
}

#tie-break-text {
    margin-bottom: 30px;
}

.question-photo {
    position: relative;
    background-color: rgba(0, 0, 0, 0);
    border: none;
    box-shadow: 2px -2px 4px 2px rgba(0, 0, 0, 0.15);
    border-radius: 15px;
    width: 200px;
    height: 200px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    transition: background-color 0.25s ease-in-out;
    -moz-transition: background-color 0.25s ease-in-out;
    -webkit-transition: background-color 0.25s ease-in-out;
    -o-transition: background-color 0.25s ease-in-out;
}

.question-photo:before {
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: inherit;
    border-radius: inherit;

}

.culture {
    background-image: url("../images/personality/culture.jpg");
}

.foodie {
    background-image: url("../images/personality/foodie.jpg");
}

.people {
    background-image: url("../images/personality/people.jpg");
}

.remote {
    background-image: url("../images/personality/remote.jpg");
}

.thrill {
    background-image: url("../images/personality/thrill.jpg");
}

.wildlife {
    background-image: url("../images/personality/wildlife.jpg");
}



/* Results Page */

#personality-div,
#country-map-div {
    background-color: white;
}

#country-info-div {
    background-color: #AEE2FF;
}

#country-highlights-div {
    background-color: #407694;
}

.results-container {
    box-shadow: 2px 0px 8px rgba(0, 0, 0, 0.15);
}

#personality-div,
#country-highlights-div,
#country-info-div {
    margin-left: 100px;
    margin-right: 100px;
}

#personality-div,
#country-info-div {
    margin-top: 60px;
}

#personality-div {
    padding: 40px;
}

#personality-stats-div {
    margin-bottom: 30px;
    width: 100%;
}

#country-info-div,
#country-highlights-div {
    padding: 50px 40px;
}

#personality-div,
#country-map-div {
    border-radius: 24px;
    -webkit-border-radius: 24px;
    -moz-border-radius: 24px;
    -o-border-radius: 24px;
}

#personality-heading {
    margin-bottom: 20px;
}


#stats-key-chart-div {
    margin-top: 15px;
    column-gap: 10px;
    row-gap: 15px;

}
/* ... */

